# art-voice-agent-accelerator

./: .env.sample  Makefile  TROUBLESHOOTING.md  pyproject.toml
.github/: ip-metadata.json
.github/skills/: README.md
.github/skills/observability-insights/: SKILL.md
.github/skills/service-catalog/: SKILL.md
.github/skills/troubleshoot/: SKILL.md
.github/workflows/: README.md  _template-deploy-azd.yml  deploy-azd-complete.yml  docs.yml
apps/artagent/backend/config/: __init__.py  appconfig_provider.py  constants.py  settings.py
apps/artagent/backend/lifecycle/: manager.py  steps.py
apps/artagent/backend/registries/agentstore/: base.py  loader.py
apps/artagent/backend/src/orchestration/: session_agents.py  session_scenarios.py
apps/artagent/backend/voice/: handler.py
apps/artagent/backend/voice/genesys/: handler.py  protocol.py
apps/artagent/backend/voice/shared/: base.py
apps/artagent/backend/voice/speech_cascade/: __init__.py  handler.py  metrics.py  orchestrator.py
apps/artagent/backend/voice/tts/: playback.py
apps/artagent/backend/voice/voicelive/: handler.py  metrics.py  orchestrator.py  tool_helpers.py
apps/artagent/frontend/: package-lock.json  package.json  vite.config.js
apps/artagent/frontend/src/: README.md
apps/artagent/frontend/src/components/: AgentBuilder.jsx  AgentBuilderContent.jsx  AgentScenarioBuilder.jsx  App.jsx  OrchestrationDiagram.jsx  StreamingModeSelector.jsx
apps/artagent/frontend/src/hooks/: useRealTimeVoiceApp.js
apps/artagent/frontend/src/utils/: foundryModels.js
apps/cardapi/mcp_app/: service.py
apps/cardapi/scripts/: provision_data.py
devops/scripts/azd/: postprovision.sh  predown.sh
devops/scripts/azd/helpers/: enable-easyauth-cardapi-mcp.sh  enable-easyauth.sh  make-resources-public.sh  sync-appconfig.sh  update-backend-cors.sh
devops/scripts/local-dev/: devtunnel_up.sh
docs/: agents.html  api.html  architecture.html  build-search-index.py  certification.html  guides.html  images  index.html  search-index.json
docs/css/: diagrams.css  style.css  syntax.css
docs/js/: diagrams.js  main.js  orchestration-diagram.js  search.js
docs/legacy/: index.md  mkdocs.yml
docs/legacy/api/: README.md  api-reference.md  mcp-api.md
docs/legacy/architecture/: CHANGELOG-ARCHITECTURE.md  README.md  lifecycle.md  memory-management-per-agent.md  telemetry.md
docs/legacy/architecture/acs/: README.md
docs/legacy/architecture/agents/: README.md  handoffs.md
docs/legacy/architecture/agents/reference/: auth-agent.md  banking-concierge.md  card-recommendation.md  claims-specialist.md  compliance-desk.md  concierge.md  fnol-agent.md  fraud-agent.md  general-kb-agent.md  index.md  investment-advisor.md  (+2 more)
docs/legacy/architecture/data/: README.md  flows.md
docs/legacy/architecture/orchestration/: README.md  cascade.md  handoff-service.md  industry-scenarios.md  orchestrators.md  scenario-system-flow.md  voicelive.md
docs/legacy/architecture/registries/: agents.md  index.md  mcp-integration.md  scenarios.md  tool-catalog.md  tools.md
docs/legacy/architecture/speech/: README.md  pricing-and-deployment.md  recognition.md  resource-pools.md  speech-services.md  synthesis.md
docs/legacy/architecture/voice/: README.md  config-reference.md  configuration.md  debugging.md
docs/legacy/archive/: README.md
docs/legacy/archive/architecture/: README.md  agent-configuration-proposal.md  backend-voice-agents-architecture.md  handoff-inventory.md  llm-orchestration.md  microsoft-agent-framework-evaluation.md
docs/legacy/archive/proposals/: handoff-consolidation-plan.md  scenario-orchestration-analysis.md  scenario-orchestration-simplification.md  specify-integration-proposal.md  tts-streaming-latency-analysis.md
docs/legacy/archive/refactoring/: PRIORITY_1_COMPLETE.md  VOICELIVE_STRUCTURE_ANALYSIS.md
docs/legacy/community/: artist-certification.md
docs/legacy/deployment/: PODMAN.md  README.md  app-config-migration-plan.md  email-setup.md  phone-number-setup.md  production.md
docs/legacy/getting-started/: README.md  demo-guide.md  local-development.md  prerequisites.md  quickstart.md
docs/legacy/guides/: agent-voice-model-config.md  repository-structure.md  utilities.md
docs/legacy/guides/registries/: tools.md
docs/legacy/industry/: README.md  banking.md  healthcare.md  insurance.md
docs/legacy/operations/: load-testing.md  testing.md  troubleshooting.md
docs/legacy/refactoring/: CLEANUP_ANALYSIS.md  CLEANUP_PROGRESS.md  MEDIAHANDLER_MIGRATION.md
docs/legacy/samples/: README.md
docs/legacy/security/: authentication.md
docs/legacy/testing/: evaluation.md  index.md  model-evaluation.md
infra/terraform/: cardapi.tf  communication.tf  containers.tf  data.tf  main.tf  outputs.tf  variables.tf
infra/terraform/params/: main.tfvars.dev.json  main.tfvars.prod.json  main.tfvars.staging.json
src/acs/: acs_helper.py
src/cosmosdb/: manager.py
src/pools/: connection_manager.py  warmable_pool.py
src/speech/: text_to_speech.py
src/stateful/: state_managment.py
tests/: conftest.py  test_acs_auth_mode.py  test_acs_events_handlers.py  test_acs_managed_identity.py  test_acs_media_lifecycle.py  test_acs_speech_channel_e2e.py  test_agent_builder_endpoint_path.py  test_cascade_orchestrator_entry_points.py  test_cascade_session_speech_settings.py  test_cascade_speech_channel.py  test_session_agent_redis_roundtrip.py  test_tool_helpers_emit.py  test_voice_handler_compat.py  test_voice_handler_components.py  test_voice_handler_threading.py  test_voicelive_barge_in.py  test_voicelive_byom_config.py  test_voicelive_warmup.py
tests/evaluation/: recorder.py  scorer.py  validator.py  wrappers.py
tests/evaluation/scenarios/: scenario.schema.json
tests/evaluation/scenarios/session_based/: latency_first_audio.yaml
tests/evaluation/schemas/: events.py  expectations.py
tests/voice/genesys/: test_genesys_endpoint.py  test_genesys_protocol.py
tools/: benchmark_tts_streaming.py
tools/genesys_simulator/: README.md  probe_connection.py
utils/: azure_auth.py  telemetry_config.py  telemetry_decorators.py
(+11 files in other folders)
